save. revert here if double[][] variables in evaluateTile does not work